# uv-secure-autofix

./: .pre-commit-hooks.yaml  README.md  fix-vul.sh  pyproject.toml
uv_secure_autofix/: __init__.py  main.py
