[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "uv-secure-autofix"
version = "0.1.1"
description = "Auto-fix uv.lock vulnerabilities"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
uv-secure-autofix = "uv_secure_autofix.main:main"
